/// <summary>
/// Enum with bindings actions.
/// </summary>
public enum BindingsAction
{
    Movement,
    Jump,
    Camera,
    Fire,
    SecondaryFire,
    Spell1,
    Spell2,
    Spell3,
    Spell4,
    Run,
    Dash,
    Pause,
    CheatConsole,
    Interact,
    NextSpell,
    PreviousSpell,
    SpellBook,
}
